Fix links target

--- a/platform.html
+++ b/platform.html
@@ -65,19 +65,6 @@
                                         </ul>
                                     </li>
 
-                                    <!--<li id="teachers_nav" class="main-menu-item">-->
-                                    <!--<a class="smooth_scroll" data-tab="teachers" href="#teachers">PE teachers</a>-->
-                                    <!--</li>-->
-                                    <!--<li id="schools_nav" class="main-menu-item">-->
-                                    <!--<a class="smooth_scroll" data-tab="schools" href="#schools">Schools</a>-->
-                                    <!--</li>-->
-                                    <!--<li id="parents_nav" class="main-menu-item">-->
-                                    <!--<a class="smooth_scroll" data-tab="parents" href="#parents">Parents</a>-->
-                                    <!--</li>-->
-                                    <!--<li id="students_nav" class="main-menu-item">-->
-                                    <!--<a class="smooth_scroll" data-tab="students" href="#students">Students</a>-->
-                                    <!--</li>-->
-
                                     <li class="main-menu-item">
                                         <a href="#" data-toggle="dropdown">
                                             <b class="caret caret_custom"></b>
@@ -121,7 +108,7 @@
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a>
                                     </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com">Sign up /
+                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com" target="_blank">Sign up /
                                         Sign in</a>
                                     </li>
                                 </ul>
@@ -281,12 +268,11 @@
                     <br>
                     Squad In Touch helps PE teachers: <br>
                     • Organise their fixtures calendar <br>
-                    • Submit game results right from the pitches <br>
                     • Keep records of pupils performance and discipline up to date <br>
                     • Communicate with parents and pupils <br>
                     • Improve PE practice getting in touch with other PE teachers and our team of Olympians
 
-                    <a href="https://app.squadintouch.com/#register">
+                    <a href="https://app.squadintouch.com/#register" target="_blank">
                         <button class="button--primary description_button">Sign up for free</button>
                     </a>
                 </div>
@@ -306,7 +292,7 @@
                     • Develop positive school/parent relationships <br>
                     • Provide engaging and successful environment for pupils, parents and staff
 
-                    <a href="https://app.squadintouch.com/#register">
+                    <a href="https://app.squadintouch.com/#register" target="_blank">
                         <button class="button--primary description_button">TRY 30 DAYS for FREE</button>
                     </a>
                 </div>
@@ -324,7 +310,7 @@
                     • Child’s performance and progress tracking <br>
                     • Tools for communicating with school PE staff and other parents
 
-                    <a href="https://app.squadintouch.com/#register">
+                    <a href="https://app.squadintouch.com/#register" target="_blank">
                         <button class="button--primary description_button">Sign up for free</button>
                     </a>
                 </div>
@@ -341,7 +327,7 @@
                     • Tools for communicating with school PE staff and other students <br>
                     • Free app to share photos of events <br>
 
-                    <a href="https://app.squadintouch.com/#register">
+                    <a href="https://app.squadintouch.com/#register" target="_blank">
                         <button class="button--primary description_button">Sign up for free</button>
                     </a>
                 </div>
