--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="copyright-margin">Copyright © 2017 Squad In Touch</div>
+        <div class="copyright-margin">Copyright © 2015-2017 Squad In Touch</div>
     </div>
 
 </footer>
