--- a/platform.html
+++ b/platform.html
@@ -220,14 +220,11 @@
                 <div class="col-md-12">
                     <ul class="bottom_navigation">
                         <li class="bottom_navigation-item">
-                            <a href="#how_it_works">See how it works</a>
+                            <a href="#video_youtube" data-toggle="modal">Show video</a>
                         </li>
                         <li class="bottom_navigation-item">
                             <a href="http://docs.squadintouch.com/security-and-data-protection/">Data protection &
                                 Security</a>
-                        </li>
-                        <li class="bottom_navigation-item">
-                            <a class="smooth_scroll" href="#testimonials">Testimonials</a>
                         </li>
                     </ul>
                 </div>
@@ -689,7 +686,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="copyright-margin">Copyright © 2017 Squad In Touch</div>
+        <div class="copyright-margin">Copyright © 2015-2017 Squad In Touch</div>
     </div>
 
 </footer>
@@ -798,6 +795,29 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- YOUTUBE -->
+<div id="video_youtube" class="modal fade">
+    <div class="modal-center" data-dismiss="modal">
+        <div class="modal-dialog">
+            <div>
+                <button type="button" class="close close-video-popup" data-dismiss="modal"
+                        aria-hidden="true">
+                </button>
+                <!-- Заголовок модального окна -->
+                <!-- Основное содержимое модального окна -->
+                <div>
+                    <iframe width="560" height="314" src="https://www.youtube.com/embed/AjAyz7-cSKc"
+                            frameborder="0" gesture="media" allow="encrypted-media"
+                            allowfullscreen></iframe>
+                </div>
+                <!-- Футер модального окна -->
+
             </div>
         </div>
     </div>
