--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                                         Make sport fun again.
                                     </h3>
 
-                                    <a href="https://app.squadintouch.com" target="_blank">
-                                        <button class="button--primary">Sign up / Sign in</button>
+                                    <a href="platform.html">
+                                        <button class="button--primary">Learn more</button>
                                     </a>
                                 </div>
 
@@ -902,8 +902,8 @@
                     Make sport fun again.
                 </h3>
 
-                <a href="https://app.squadintouch.com" target="_blank">
-                    <button class="button--primary">Sign up / Sign in</button>
+                <a href="platform.html">
+                    <button class="button--primary">Learn more</button>
                 </a>
             </div>
 
