--- a/platform.html
+++ b/platform.html
@@ -108,7 +108,8 @@
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a>
                                     </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com" target="_blank">Sign up /
+                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com"
+                                                                         target="_blank">Sign up /
                                         Sign in</a>
                                     </li>
                                 </ul>
@@ -176,8 +177,11 @@
                                 <h2> Sports Stars Inspiration Day</h2>
                                 <h5>Helping develop PE and Sport through <br>Inspiration,
                                     Aspiration and Engagement.</h5>
-                                <button class="button--primary" href="#host_event" data-toggle="modal">Event Enquiry
-                                </button>
+                                <a href="index.html">
+                                    <button class="button--primary">
+                                        Learn more
+                                    </button>
+                                </a>
                             </div>
                             <div class="container oiddown">
 
@@ -581,8 +585,11 @@
                         <h2> Sports Stars Inspiration Day</h2>
                         <h5>Helping develop PE and Sport through <br>Inspiration,
                             Aspiration and Engagement.</h5>
-                        <button class="button--primary" href="#host_event" data-toggle="modal">Event Enquiry
-                        </button>
+                        <a href="index.html">
+                            <button class="button--primary">
+                                Learn more
+                            </button>
+                        </a>
                     </div>
                     <div class="container oiddown">
 
