Fix youtube link

--- a/platform.html
+++ b/platform.html
@@ -819,9 +819,8 @@
                 <!-- Заголовок модального окна -->
                 <!-- Основное содержимое модального окна -->
                 <div>
-                    <iframe width="560" height="314" src="https://www.youtube.com/embed/AjAyz7-cSKc"
-                            frameborder="0" gesture="media" allow="encrypted-media"
-                            allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/jeSW-12OMEU" frameborder="0"
+                            gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                 </div>
                 <!-- Футер модального окна -->
 
