--- a/platform.html
+++ b/platform.html
@@ -263,7 +263,7 @@
 
                 <div id="teachers" class="tab-content description_tabs-content current">
                     <strong>
-                        Spend your time doing the sport. <br>
+                        Improve PE practice; Spend your time doing the sport. <br>
                         Allow Squad In Touch to take care of the rest. <br>
                     </strong>
                     <br>
@@ -271,7 +271,8 @@
                     • Organise their fixtures calendar <br>
                     • Keep records of pupils performance and discipline up to date <br>
                     • Communicate with parents and pupils <br>
-                    • Improve PE practice getting in touch with other PE teachers and our team of Olympians
+                    • Improve PE practice getting in touch with other PE teachers and our team of Olympians Spend your
+                    time doing the sport. Allow Squad In Touch to take care of the rest.
 
                     <a href="https://app.squadintouch.com/#register" target="_blank">
                         <button class="button--primary description_button">Sign up for free</button>
@@ -300,8 +301,8 @@
 
                 <div id="parents" class="tab-content description_tabs-content">
                     <strong>
-                        Don’t JUST read results. <br>
-                        IMRPOVE results with our Olympians advice.<br>
+                        Don’t JUST read results, <br>
+                        IMPROVE results with our Olympians advice.<br>
                     </strong>
                     <br>
                     With Squad In Touch parents are provided with: <br>
