--- a/platform.html
+++ b/platform.html
@@ -263,7 +263,7 @@
 
                 <div id="teachers" class="tab-content description_tabs-content current">
                     <strong>
-                        Improve PE practice; Spend your time doing the sport. <br>
+                        Spend your time doing the sport. <br>
                         Allow Squad In Touch to take care of the rest. <br>
                     </strong>
                     <br>
@@ -271,7 +271,7 @@
                     • Organise their fixtures calendar <br>
                     • Keep records of pupils performance and discipline up to date <br>
                     • Communicate with parents and pupils <br>
-                    • Improve PE practice getting in touch with other PE teachers and our team of Olympians Spend your
+                    • Improve PE practice; getting in touch with other PE teachers and our team of Olympians Spend your
                     time doing the sport. Allow Squad In Touch to take care of the rest.
 
                     <a href="https://app.squadintouch.com/#register" target="_blank">
@@ -376,7 +376,7 @@
                         <div class="text">
                             <h6>Schools and PE teachers web app</h6>
                             <p>
-                                • Manage schools details, school forms, houses and pupils list <br>
+                                • Manage school details, school forms, houses and pupils list <br>
                                 • Manage the fixtures calendar, extra-curricular clubs and mini-tournaments <br>
                                 • Input game results, as well as pupil’s individual performance and discipline scores
                                 <br>
@@ -410,7 +410,7 @@
                             <h6>Schools PE staff mobile app</h6>
                             <p>
                                 • See your school fixtures calendar<br>
-                                • Input game results and match reports from the pitches<br>
+                                • Input game results and match reports from the pitch<br>
                                 • See your pupil’s emergency contact details even when internet connection is
                                 unavailable<br>
                                 • Get notified about pupils unavailability to take part<br>
@@ -439,11 +439,11 @@
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
                         <div class="text">
-                            <h6>Tournaments and events web site</h6>
+                            <h6>Tournaments and events website</h6>
                             <p>
-                                • Well-designed groups results and finals pages<br>
+                                • Well designed groups results and finals pages<br>
                                 • Game results presented automatically once submitted<br>
-                                • Dedicated web-site for each event hosted on Squad In Touch servers for free<br>
+                                • Dedicated website for each event hosted on Squad In Touch servers for free<br>
                                 • Detailed results for each school which participated<br>
                                 • Printable and email-adjusted PDFs with overall tournament results
                             </p>
@@ -454,13 +454,13 @@
                     </div>
                     <div id="tab-6" class="vertical_tab-content">
                         <div class="text">
-                            <h6>Schools sports partnerships web site</h6>
+                            <h6>Schools sports partnerships website</h6>
                             <p>
                                 • Modern design, photo gallery on the landing page<br>
                                 • Seasonal tables are published automatically once game results are submitted<br>
                                 • Highlighted events in the focus<br>
                                 • SSP sport news<br>
-                                • Dedicated web-site for each event hosted on Squad In Touch servers for free
+                                • Dedicated website for each event hosted on Squad In Touch servers for free
                             </p>
                         </div>
                         <a class="show_img_popup" content="src/image/HW_06_SSP.png">
