--- a/sport/index.html
+++ b/sport/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squad In Touch</title>
-    <link rel="stylesheet" href="dist/style.css" type="text/css"/>
+    <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-main" data-offset="72">
@@ -20,13 +20,13 @@
                 <!--LEFT MENU-->
                 <div class="col-md-12 fixed_menu-wrapper">
                     <div class="menu_left">
-                        <img class="logo" src="src/image/logo.svg">
+                        <img class="logo" src="../src/image/logo.svg">
                         <div class="menu_dropdown hidden-xs">
                             <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
                                     class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                                 <li><a class="active" href="#">Sports Stars Inspiration Day</a></li>
-                                <li><a href="platform.html">Sports development platform</a></li>
+                                <li><a href="../platform">Sports development platform</a></li>
                             </ul>
                         </div>
                     </div>
@@ -37,7 +37,7 @@
                         <nav class="navbar-custom">
                             <div class="navbar-header">
                                 <a href="#navbar-main" class="visible-xs collapsed menu_button" data-toggle="collapse">
-                                    <img src="src/icon/menu.svg" alt="menu"/>
+                                    <img src="../src/icon/menu.svg" alt="menu"/>
                                 </a>
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
@@ -150,7 +150,7 @@
                                         Make sport fun again.
                                     </h3>
 
-                                    <a href="platform.html">
+                                    <a href="../platform">
                                         <button class="button--primary">Learn more</button>
                                     </a>
                                 </div>
@@ -239,7 +239,7 @@
                 <!--<div class="row">-->
                 <div class="spotsmens_info">
                     <div class="brandan_photo">
-                        <img class="photo_size" src="src/image/brandan.jpg" alt="reily"/>
+                        <img class="photo_size" src="../src/image/brandan.jpg" alt="reily"/>
                     </div>
                     <div class="sportsmens_bio">
                         <div class="star_title">
@@ -295,7 +295,7 @@
                                 <div class="col-md-6">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/toby.jpg"
+                                            <img class="photo_size" src="../src/image/toby.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
@@ -318,7 +318,7 @@
 
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/leon.jpg"
+                                            <img class="photo_size" src="../src/image/leon.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
@@ -343,7 +343,7 @@
                                 <div class="col-md-6">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/jo.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/jo.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="sportsmens_title">
@@ -367,7 +367,7 @@
 
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/mel.jpg"
+                                            <img class="photo_size" src="../src/image/mel.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
@@ -398,7 +398,7 @@
                                 <div class="col-md-6">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/martyn.jpg"
+                                            <img class="photo_size" src="../src/image/martyn.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
@@ -423,7 +423,7 @@
                                     </div>
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
-                                            <img class="photo_size" src="src/image/michaela.jpg"
+                                            <img class="photo_size" src="../src/image/michaela.jpg"
                                                  alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
@@ -494,7 +494,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="brandan_size" src="src/image/brandan.jpg" alt="reily"/>
+                                            <img class="brandan_size" src="../src/image/brandan.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -529,7 +529,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="photo_size" src="src/image/michaela.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/michaela.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -562,7 +562,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="photo_size" src="src/image/jo.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/jo.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -594,7 +594,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="photo_size" src="src/image/leon.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/leon.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -626,7 +626,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="photo_size" src="src/image/martyn.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/martyn.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -661,7 +661,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="photo_size" src="src/image/mel.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/mel.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -693,7 +693,7 @@
                                     <!--<div class="row">-->
                                     <div class="spotsmens_info">
                                         <div class="brandan_photo">
-                                            <img class="photo_size" src="src/image/toby.jpg" alt="reily"/>
+                                            <img class="photo_size" src="../src/image/toby.jpg" alt="reily"/>
                                         </div>
                                         <div class="sportsmens_bio">
                                             <div class="star_title">
@@ -772,7 +772,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-2 testimonial-school-section">
-                                    <img class="testimonial-school" src="src/image/WE_blazon.png"
+                                    <img class="testimonial-school" src="../src/image/WE_blazon.png"
                                          alt="William Edwards"/>
                                 </div>
                                 <div class="col-md-4 testimonial-info">
@@ -808,7 +808,7 @@
                     <div class="container">
                         <div class="row school2-margin">
                             <div class="col-md-2 testimonial-school-section">
-                                <img class="testimonial-school" src="src/image/WH_blazon.png" alt="WH"/>
+                                <img class="testimonial-school" src="../src/image/WH_blazon.png" alt="WH"/>
                             </div>
                             <div class="col-md-4 testimonial-info">
                                 <div class="testimonials-title">
@@ -865,7 +865,7 @@
                     <div class="active item">
 
                         <div class="testimonial2-school-section">
-                            <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
+                            <img class="testimonial-school" src="../src/image/sirjohn.jpg" alt="reily"/>
                         </div>
                         <div class="testimonial-background">
                             <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
@@ -902,7 +902,7 @@
                     Make sport fun again.
                 </h3>
 
-                <a href="platform.html">
+                <a href="../platform">
                     <button class="button--primary">Learn more</button>
                 </a>
             </div>
@@ -995,7 +995,7 @@
                     <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
             <div class="col-md-4 col-md-offset-4 copyright-position">
-                <img src="src/image/logoccss.svg" alt="reily"/>
+                <img src="../src/image/logoccss.svg" alt="reily"/>
             </div>
         </div>
     </div>
@@ -1254,7 +1254,7 @@
 </div>
 <!--./MODAL WINDOWS-->
 
-<script src="dist/app.js" type="text/javascript"></script>
+<script src="../dist/app.js" type="text/javascript"></script>
 </body>
 
 </html>
