--- a/platform/index.html
+++ b/platform/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squad In Touch</title>
-    <link rel="stylesheet" href="dist/style.css" type="text/css"/>
+    <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-main" data-offset="72">
@@ -23,14 +23,14 @@
                     <!--LEFT MENU-->
                     <div class="menu_left">
                         <a class="smooth_scroll" href="#home">
-                            <img class="logo" src="src/image/logo.svg">
+                            <img class="logo" src="../src/image/logo.svg">
                         </a>
                         <div class="menu_dropdown hidden-xs">
                             <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
                                     class="caret caret_custom"></b>Sports development platform</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                                 <li><a class="active" href="#">Sports development platform</a></li>
-                                <li><a href="index.html">Sports Stars Inspiration Day</a></li>
+                                <li><a href="../sport/">Sports Stars Inspiration Day</a></li>
                             </ul>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                         <nav class="navbar-custom">
                             <div class="navbar-header">
                                 <a href="#navbar-main" class="visible-xs collapsed menu_button" data-toggle="collapse">
-                                    <img src="src/icon/menu.svg" alt="menu"/>
+                                    <img src="../src/icon/menu.svg" alt="menu"/>
                                 </a>
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
@@ -177,7 +177,7 @@
                                 <h2> Sports Stars Inspiration Day</h2>
                                 <h5>Helping develop PE and Sport through <br>Inspiration,
                                     Aspiration and Engagement.</h5>
-                                <a href="index.html">
+                                <a href="../sport">
                                     <button class="button--primary">
                                         Learn more
                                     </button>
@@ -339,10 +339,10 @@
 
             <div class="col-sm-5 col-md-5 description_image hidden-xs">
                 <!--TAB IMAGES-->
-                <img id="teachers_image" class="tab-image current" src="src/image/teacher.png"/>
-                <img id="schools_image" class="tab-image" src="src/image/HH_Schools.png"/>
-                <img id="parents_image" class="tab-image" src="src/image/HH_Parents.png"/>
-                <img id="students_image" class="tab-image" src="src/image/HH_Students.png"/>
+                <img id="teachers_image" class="tab-image current" src="../src/image/teacher.png"/>
+                <img id="schools_image" class="tab-image" src="../src/image/HH_Schools.png"/>
+                <img id="parents_image" class="tab-image" src="../src/image/HH_Parents.png"/>
+                <img id="students_image" class="tab-image" src="../src/image/HH_Students.png"/>
             </div>
 
         </div>
@@ -386,7 +386,7 @@
                             </p>
                         </div>
                         <a class="img-wrapper show_img_popup" content="src/image/HW_01_Schools_web.png">
-                            <img src="src/image/HW_01_Schools_web.png"/>
+                            <img src="../src/image/HW_01_Schools_web.png"/>
                         </a>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
@@ -402,7 +402,7 @@
                             </p>
                         </div>
                         <a class="show_img_popup" content="src/image/HW_02_Schools_public_web.png">
-                            <img src="src/image/HW_02_Schools_public_web.png"/>
+                            <img src="../src/image/HW_02_Schools_public_web.png"/>
                         </a>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
@@ -418,7 +418,7 @@
                             </p>
                         </div>
                         <a class="show_img_popup" content="src/image/HW_03_Schools_mobile.png">
-                            <img src="src/image/HW_03_Schools_mobile.png"/>
+                            <img src="../src/image/HW_03_Schools_mobile.png"/>
                         </a>
                     </div>
                     <div id="tab-4" class="vertical_tab-content">
@@ -434,7 +434,7 @@
                             </p>
                         </div>
                         <a class="show_img_popup" content="src/image/HW_04_Parents_mobile.png">
-                            <img src="src/image/HW_04_Parents_mobile.png"/>
+                            <img src="../src/image/HW_04_Parents_mobile.png"/>
                         </a>
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
@@ -449,7 +449,7 @@
                             </p>
                         </div>
                         <a class="show_img_popup" content="src/image/HW_05_Tournaments.png">
-                            <img src="src/image/HW_05_Tournaments.png"/>
+                            <img src="../src/image/HW_05_Tournaments.png"/>
                         </a>
                     </div>
                     <div id="tab-6" class="vertical_tab-content">
@@ -464,7 +464,7 @@
                             </p>
                         </div>
                         <a class="show_img_popup" content="src/image/HW_06_SSP.png">
-                            <img src="src/image/HW_06_SSP.png">
+                            <img src="../src/image/HW_06_SSP.png">
                         </a>
                     </div>
                 </div>
@@ -485,7 +485,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="testimonial_logo">
-                    <img src="src/image/isa-logo.png" alt="isa">
+                    <img src="../src/image/isa-logo.png" alt="isa">
                 </div>
             </div>
             <div class="col-md-7">
@@ -511,7 +511,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="testimonial_logo">
-                    <img src="src/image/sir_john.png" alt="Sir John Talbot's school">
+                    <img src="../src/image/sir_john.png" alt="Sir John Talbot's school">
                 </div>
             </div>
             <div class="col-md-7">
@@ -577,9 +577,9 @@
     <div class="container">
         <div class="partners_container">
             <h3>Partners</h3>
-            <img src="src/image/yst.svg" alt="YST"/>
-            <img src="src/image/isa-logo.png" alt="ISA"/>
-            <img src="src/image/peba.png" alt="Business Associate"/>
+            <img src="../src/image/yst.svg" alt="YST"/>
+            <img src="../src/image/isa-logo.png" alt="ISA"/>
+            <img src="../src/image/peba.png" alt="Business Associate"/>
         </div>
     </div>
 </section>
@@ -596,7 +596,7 @@
                         <h2> Sports Stars Inspiration Day</h2>
                         <h5>Helping develop PE and Sport through <br>Inspiration,
                             Aspiration and Engagement.</h5>
-                        <a href="index.html">
+                        <a href="../sport">
                             <button class="button--primary">
                                 Learn more
                             </button>
@@ -699,7 +699,7 @@
                     <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
             <div class="col-md-4 col-md-offset-4 copyright-position">
-                <img src="src/image/logoccss.svg" alt="reily"/>
+                <img src="../src/image/logoccss.svg" alt="reily"/>
             </div>
         </div>
     </div>
@@ -855,6 +855,6 @@
 </div>
 <!--./MODAL WINDOWS-->
 
-<script src="dist/app.js" type="text/javascript"></script>
+<script src="../dist/app.js" type="text/javascript"></script>
 </body>
 </html>
