Fix image links

--- a/platform/index.html
+++ b/platform/index.html
@@ -385,7 +385,7 @@
                                 • Keep your school sports news up to date
                             </p>
                         </div>
-                        <a class="img-wrapper show_img_popup" content="src/image/HW_01_Schools_web.png">
+                        <a class="img-wrapper show_img_popup" content="../src/image/HW_01_Schools_web.png">
                             <img src="../src/image/HW_01_Schools_web.png"/>
                         </a>
                     </div>
@@ -401,7 +401,7 @@
                                 automatically
                             </p>
                         </div>
-                        <a class="show_img_popup" content="src/image/HW_02_Schools_public_web.png">
+                        <a class="show_img_popup" content="../src/image/HW_02_Schools_public_web.png">
                             <img src="../src/image/HW_02_Schools_public_web.png"/>
                         </a>
                     </div>
@@ -417,7 +417,7 @@
                                 • Send notifications to parents and students about last minutes changes
                             </p>
                         </div>
-                        <a class="show_img_popup" content="src/image/HW_03_Schools_mobile.png">
+                        <a class="show_img_popup" content="../src/image/HW_03_Schools_mobile.png">
                             <img src="../src/image/HW_03_Schools_mobile.png"/>
                         </a>
                     </div>
@@ -433,7 +433,7 @@
                                 • Communicate with school PE staff as well as other parents and students
                             </p>
                         </div>
-                        <a class="show_img_popup" content="src/image/HW_04_Parents_mobile.png">
+                        <a class="show_img_popup" content="../src/image/HW_04_Parents_mobile.png">
                             <img src="../src/image/HW_04_Parents_mobile.png"/>
                         </a>
                     </div>
@@ -448,7 +448,7 @@
                                 • Printable and email-adjusted PDFs with overall tournament results
                             </p>
                         </div>
-                        <a class="show_img_popup" content="src/image/HW_05_Tournaments.png">
+                        <a class="show_img_popup" content="../src/image/HW_05_Tournaments.png">
                             <img src="../src/image/HW_05_Tournaments.png"/>
                         </a>
                     </div>
@@ -463,7 +463,7 @@
                                 • Dedicated website for each event hosted on Squad In Touch servers for free
                             </p>
                         </div>
-                        <a class="show_img_popup" content="src/image/HW_06_SSP.png">
+                        <a class="show_img_popup" content="../src/image/HW_06_SSP.png">
                             <img src="../src/image/HW_06_SSP.png">
                         </a>
                     </div>
