--- a/sport/index.html
+++ b/sport/index.html
@@ -113,25 +113,28 @@
                                         </div>
 
                                     </div>
-
                                 </div>
 
                             </div>
                         </div>
                         <div class="container oiddown visible-xs">
 
-                            <div>“Our Olympian was fantastic and really engaged the students on a level
-                                they could relate to. He made them laugh and also drew “them into the
-                                story of his journey to success via different“ obstacles including injury.
-                                We would love to have him back!”
+                            <div>“Brendan gave an inspirational assembly to students in Years 7 and 8
+                                during
+                                which he gave invaluable advice about how to set goals,
+                                dream big and work hard, even in the face of adversity.
+                                Brendan then spent time working with them on a variety of different
+                                physical
+                                activities throughout the day.”
                             </div>
 
                             <div class="bold_text">
-                                Jacqui Ferris
+                                Matt Bowden
                             </div>
                             <div>
-                                Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                                PE Teacher, William Edwards School, Essex
                             </div>
+
 
                         </div>
 
@@ -173,6 +176,23 @@
                                     </p>
                                 </div>
                             </div>
+                        </div>
+                        <div class="slider_content-bottom visible-xs">
+
+                            <p>
+                                "Squad In Touch provides everything we need to organise school teams and clubs
+                                easily.
+                                Anything that is not a feature can be sorted out effectively and the support
+                                we have been given setting this up has been great.
+                                This really is one of the best platforms out there to promote school sport and
+                                the time
+                                saving potential alone is worth the subscription fee"
+                                <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
+                            </p>
+
+                            <p>
+                                <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+                            </p>
                         </div>
                     </div>
                     <!--./SECOND SLIDE--->
@@ -923,6 +943,23 @@
                 </p>
             </div>
         </div>
+    </div>
+    <div class="slider_content-bottom visible-xs">
+
+        <p>
+            "Squad In Touch provides everything we need to organise school teams and clubs
+            easily.
+            Anything that is not a feature can be sorted out effectively and the support
+            we have been given setting this up has been great.
+            This really is one of the best platforms out there to promote school sport and
+            the time
+            saving potential alone is worth the subscription fee"
+            <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
+        </p>
+
+        <p>
+            <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+        </p>
     </div>
 </section>
 <!--./Software-->
